--- a/styles/global.css
+++ b/styles/global.css
@@ -1,24 +1,31 @@
-html, body{
+html, body {
     padding: 0;
     margin: 0;
     line-height: 1.6;
     font-size: 18px;
+    max-width: 100vw;
+    overflow-x: hidden;
 }
 
-*{
+* {
     box-sizing: border-box;
 }
 
-a{
-    color: #0070f3;
+a {
     text-decoration: none;
 }
 
-a:hover{
-    text-decoration: underline;
-}
 
-img{
+img {
     max-width: 100%;
     display: block;
+}
+div{
+    margin: 0;
+    padding: 0;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    margin: 0;
+    padding: 0;
 }
